added MIT LICENSE

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,20 +78,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 168,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>popularity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Radiohead</td>\n",
+       "      <td>[alternative rock, art rock, melancholia, oxfo...</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>My Chemical Romance</td>\n",
+       "      <td>[emo, modern rock, pop punk, pov: indie, rock]</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Pixies</td>\n",
+       "      <td>[alternative rock, boston rock, permanent wave...</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Weezer</td>\n",
+       "      <td>[alternative rock, modern power pop, modern ro...</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Korn</td>\n",
+       "      <td>[alternative metal, funk metal, hard rock, nu ...</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Have A Nice Life</td>\n",
+       "      <td>[blackgaze, doomgaze, dream pop, nu gaze]</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Mitski</td>\n",
+       "      <td>[brooklyn indie, pov: indie]</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Slipknot</td>\n",
+       "      <td>[alternative metal, nu metal, rap metal, rock]</td>\n",
+       "      <td>76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>The Clash</td>\n",
+       "      <td>[alternative rock, permanent wave, punk, rock]</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>System Of A Down</td>\n",
+       "      <td>[alternative metal, nu metal, rap metal, rock]</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>my bloody valentine</td>\n",
+       "      <td>[alternative rock, dream pop, noise pop, shoeg...</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>TOOL</td>\n",
+       "      <td>[alternative metal, art rock, nu metal, post-g...</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Stone Temple Pilots</td>\n",
+       "      <td>[alternative metal, alternative rock, classic ...</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Sonic Youth</td>\n",
+       "      <td>[alternative rock, indie rock, noise pop, nois...</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Nirvana</td>\n",
+       "      <td>[grunge, permanent wave, rock]</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>The Fall of Troy</td>\n",
+       "      <td>[post-hardcore, progressive post-hardcore, scr...</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Swans</td>\n",
+       "      <td>[art pop, dream pop, experimental, experimenta...</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Casket Cassette</td>\n",
+       "      <td>[modern darkwave]</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Unwound</td>\n",
+       "      <td>[dream pop, experimental rock, noise rock, oly...</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   name                                             genres  \\\n",
+       "0             Radiohead  [alternative rock, art rock, melancholia, oxfo...   \n",
+       "1   My Chemical Romance     [emo, modern rock, pop punk, pov: indie, rock]   \n",
+       "2                Pixies  [alternative rock, boston rock, permanent wave...   \n",
+       "3                Weezer  [alternative rock, modern power pop, modern ro...   \n",
+       "4                  Korn  [alternative metal, funk metal, hard rock, nu ...   \n",
+       "5      Have A Nice Life          [blackgaze, doomgaze, dream pop, nu gaze]   \n",
+       "6                Mitski                       [brooklyn indie, pov: indie]   \n",
+       "7              Slipknot     [alternative metal, nu metal, rap metal, rock]   \n",
+       "8             The Clash     [alternative rock, permanent wave, punk, rock]   \n",
+       "9      System Of A Down     [alternative metal, nu metal, rap metal, rock]   \n",
+       "10  my bloody valentine  [alternative rock, dream pop, noise pop, shoeg...   \n",
+       "11                 TOOL  [alternative metal, art rock, nu metal, post-g...   \n",
+       "12  Stone Temple Pilots  [alternative metal, alternative rock, classic ...   \n",
+       "13          Sonic Youth  [alternative rock, indie rock, noise pop, nois...   \n",
+       "14              Nirvana                     [grunge, permanent wave, rock]   \n",
+       "15     The Fall of Troy  [post-hardcore, progressive post-hardcore, scr...   \n",
+       "16                Swans  [art pop, dream pop, experimental, experimenta...   \n",
+       "17      Casket Cassette                                  [modern darkwave]   \n",
+       "18              Unwound  [dream pop, experimental rock, noise rock, oly...   \n",
+       "\n",
+       "    popularity  \n",
+       "0           78  \n",
+       "1           75  \n",
+       "2           68  \n",
+       "3           71  \n",
+       "4           73  \n",
+       "5           52  \n",
+       "6           76  \n",
+       "7           76  \n",
+       "8           68  \n",
+       "9           77  \n",
+       "10          55  \n",
+       "11          67  \n",
+       "12          66  \n",
+       "13          56  \n",
+       "14          79  \n",
+       "15          43  \n",
+       "16          45  \n",
+       "17          25  \n",
+       "18          39  "
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "artists_df = get_top_artists(sp)"
+    "get_top_artists(sp, 20, 'short_term')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
-    "artists_df.to_csv('top90artists.csv')"
+    "artists_df = get_top_artists(sp, 90, 'medium_term')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "artists_df.to_csv('top90artists_med.csv')"
    ]
   },
   {
